assets/styles/style.css
html {
  color: #fff;
  font-family: Arial, Helvetica, sans-serif;
  -webkit-font-smoothing: antialiased;
}

/* hide / show the body when the loader is finished */
body>.inner {
  display: none;
}

body.pg-loaded>.inner {
  display: block;
}

/* Fallen */
/* Fallen */
/* Style the sidebar - fixed full height */
.sidebar {
  height: 100%;
  width: 120px;
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
  background-color: #000;
  overflow-x: hidden;
  padding-top: 16px;
}

/* Style sidebar links */
.sidebar a {
  padding: 6px 8px 6px 16px;
  text-decoration: none;
  font-size: 20px;
  color: #818181;
  display: block;
}

/* Style links on mouse-over */
.sidebar a:hover {
  color: #fff;
}

#peerCount {
  bottom: 0;
  height: 20px;
  color: #aaa;
  position: absolute;
  font-size: 0.8em;
  padding-left: 5px;
}

#syncProgress {
  height: 20px;
  position: fixed;
  z-index: 1;
  left: 120px;
  right: 0;
  bottom: 0;
  background-color: #000;
  border-top: 1px solid #000;
}

#mainContent {
  position: fixed;
  z-index: 1;
  left: 120px;
  top: 0;
  right: 0;
  bottom: 20px;
  background-color: #212529;
}

/* Style the main content */
.main {
  margin-left: 160px;
  /* Same as the width of the sidenav */
  padding: 0px 10px;
}

/* Add media queries for small screens (when the height of the screen is less than 450px, add a smaller padding and font-size) */
@media screen and (max-height: 450px) {
  .sidebar {
    padding-top: 15px;
  }

  .sidebar a {
    font-size: 18px;
  }
}

.sidebarIcon {
  width: 100%;
  height: 80px;
  line-height: 80px;
}

.sidebarIconWrapper {
  width: 100%;
  height: 80px;
  display: inline-block;
  text-align: center;
  vertical-align: middle;
}

#sumBalance {
  float: right;
  line-height: 38px;
  margin-right: 10px;
}

.modalBody {
  margin: 20px;
  color: #333;
}

#dlgGeneralError .modalBody {
  height: 100px;
}

#dlgGeneralConfirm .modalBody {
  height: 100px;
}

#dlgDeleteAddressConfirm .modalBody {
  height: 100px;
}

#dlgShowAddressQRCode .modalBody {
  height: 300px;
}

#dlgAboutInfo .modalBody {
  height: 180px;
}

#dlgCreateWalletPassword .modalBody,
#dlgCreateAddressAndName .modalBody {
  height: 200px;
}

#dlgSendWalletPassword .modalBody,
#dlgImportFromPrivateKey .modalBody {
  height: 300px;
}

#dlgTransactionInfo {
  width: 700px;
  max-width: 700px !important;
}

#dlgTransactionInfo .modalBody {
  height: 300px;
}

#dlgAddAddressToBook .modalBody,
#dlgChangeWalletName .modalBody,
#dlgChangeAddressName .modalBody {
  height: 150px;
}

#dlgAddressListBody {
  margin: 0px;
  padding: 20px;
  background-color: #333;
}

#dlgAddressList .modalBody {
  color: #aaa;
}

.btn-dialog-confirm {
  position: absolute;
  bottom: 10px;
  right: 20px;
}

.btn-dialog-cancel {
  position: absolute;
  bottom: 10px;
  right: 80px;
}

.modalDialog {
  display: none;
  border-bottom: 3px solid #308968 !important;
  border-radius: 0px !important;
}

.iziModal-header {
  background: #308968 !important;
}

#walletsToolbar {
  padding: 10px;
  border-bottom: 1px solid #111;
  border-radius: 0px;
  height: 60px;
}

#transactionsWrapper {
  color: #aaa;
  padding-top: 10px;
}

div.iconSelected {
  background-color: ivory;
  border: 1px solid slategray;
}

div.loadingText {
  color: #aaa;
  margin-top: 50px;
}

#tableTransactionsForAll_wrapper .dataTables_scroll {
  font-size: 0.9em;
}

div.sidebar svg {
  color: #308968;
}

#tableTransactionsForAll_filter {
  color: #aaa;
  padding-right: 10px;
}

#tableTransactionsForAll_filter label {
  color: #aaa;
  font-size: 1em;
}

#tableTransactionsForAll_filter input {
  width: 400px;
  color: #aaa;
  padding: 12px 10px;
  display: inline-block;
  border: 1px solid #ccc;
  border-radius: 4px;
  height: 2.5em;
  box-sizing: border-box;
}

.floatThead-container {
  background-color: #212529;
}

.dataTables_scrollBody .transactionsBlockNum {
  color: #f92472;
  cursor: pointer;
}

.sendWrapper,
.settingsWrapper {
  padding: 30px;
}

#sendMaxAmmount {
  margin-right: 5px;
}

#btnSendAll {
  margin-left: 10px;
}

#addressList {
  overflow-y: auto;
  height: calc(100vh - 80px);
}

#addressList .colEdit {
  padding-left: 20px;
}

#addressList th {
  color: #ccc;
  font-size: 1.1em;
  font-weight: normal;
}

.sendTXInfo {
  height: 30px;
}

.sendTXInfo label {
  line-height: 30px;
  font-size: 1.1em;
}

.txInfo label {
  line-height: 30px;
  margin-left: 5px;
  font-size: 1em;
}

.txInfo label+label {
  color: #308968;
  margin-left: 0px;
}

.sendTXdivider {
  margin-top: 30px;
  margin-bottom: 20px;
}

#fromAddressInfo,
#toAddressInfo,
#valueToSendInfo,
#feeToPayInfo {
  color: #308968;
  margin-left: 5px;
  margin-right: 5px;
}

.accountName {
  color: #308968;
}

.accountAddr {
  font-size: 0.8em;
}

.pg-loading-screen .pg-loading-html {
  margin-top: 0px;
}

.fromAddressSelect .dropdown-content {
  width: 600px !important;
}

.loadingOverlay {
  background-color: #212529;
  display: none;
  position: fixed;
  left: 120px;
  right: 0;
  bottom: 20px;
  top: 0;
}

.loadingOverlay .loadingWrapper {
  height: 100%;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.loadingTextTransactions {
  font-size: 1.3em;
  margin-bottom: 30px;
}

.spinner .bounce {
  background-color: #aaa;
}

.sumDollars,
.sumBalance,
.sumCurrency {
  color: #ccc;
  margin-right: 5px;
}

.cleanText {
  margin-left: 10px;
}

.cleanWrapper {
  margin: 10px;
}

#noWalletsPresent,
#noAddressPresent {
  font-size: 1.3em;
}

div.noWalletsWrapper,
div.noAddressWrapper {
  display: flex;
  align-items: center;
  justify-content: center;
}

.textAddress {
  cursor: pointer;
}

.addressInputWrapper {
  display: flex;
}

#addressToolbar {
  display: flex;
}

#addressListFilter {
  color: #aaa;
}

.btnSendToolButton {
  width: 40px;
  padding: 0px;
}

#btnAddToAddressBook {
  margin-right: 3px;
}

.infoText {
  margin: 3px;
}

#aboutInfoWallet {
  font-size: 1.5em;
  text-decoration: underline;
  margin-bottom: 10px;
}

#sendFromAddressName,
#sendToAddressName {
  font-size: 95%;
}

.etho-red {
  background-color: #308968 !important;
}

#chartMarketPrice {
  height: calc(100vh - 260px);
}

#addrQRCode {
  text-align: center;
}

/* JB add------------------------------ */

.picto-item {
  position: relative;  /*.picto-item referents*/
  cursor: help;
  border-radius: 40%;
}

/* :after element on hover and focus :*/

.picto-item:hover:after,
.picto-item:focus:after {
  content: attr(aria-label);  /* display aria-label */
  position: absolute;
  top: 2.4em; 
  left: 50%;
	transform: translateX(-50%); /* H center  */
  z-index: 1; /* Z-Top */
  white-space: nowrap;  /* no cr-lf */
  padding: 5px 14px;
  background: #413219;
  background: #308529;

  color: #fff;
  border-radius: 4px;
 /* font-size: 1.2rem; */
}

/* 2nd element for the arrow :before */

[aria-label]:hover:before,
[aria-label]:focus:before {
/*  content: "▼"; */
  content: "◄"; 

  position: absolute;
 /* top: -1em; */
	left: -50%;
	transform: translateX(-50%); 
  font-size: 24px;
/*  color: #413219; */
  color: #308529; 

}

/* no contour on :focus */
[aria-label]:focus {
  outline: none;
}



/* Deco */ 
p, .pictos {
  text-align: center;
}

.picto-item {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  margin: 0 .2em;
 /* width: 1.2em; */
/*  height: 1.2em; */
  color: #413219;
  color: #308529;
  background: #e1d3bd;
/*  background: #308529; */

/*  background: #e1d3bd; */
/*  font-size: 3rem; */
  text-align: center;
  text-decoration: none;
}


.picto-item2:hover:after,
.picto-item2:focus:after {
  content: attr(aria-label);  
  position: absolute;
  /* top: 2.4em; */
  left: 50%;
	transform: translateX(-50%); 
  z-index: 1; 
  white-space: nowrap;  
  padding: 5px 14px;
  background: #413219;
  background: #308529;

  color: #fff;
  border-radius: 4px;
 /* font-size: 1.2rem; */
}

.picto-item2 {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  margin: 0 .2em;
 /* width: 1.2em; */
/*  height: 1.2em; */
  color: #413219;
  color: #308529;
  background: #e1d3bd;
/*  background: #308529; */

/*  background: #e1d3bd; */
/*  font-size: 3rem; */
  text-align: center;
  text-decoration: none;
}

.picto-item3:hover:after,
.picto-item3:focus:after {
  content: attr(aria-label);  
  position: absolute;
  /* top: 2.4em; */
  left: 75%;
	transform: translateX(-25%); 
  z-index: 1; 
  white-space: nowrap;  
  padding: 5px 14px;
  background: #413219;
  background: #308529;

  color: #fff;
  border-radius: 4px;
 /* font-size: 1.2rem; */
   font-size: 0.8rem; 

}

.picto-item3 {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  margin: 0 .2em;
 /* width: 1.2em; */
/*  height: 1.2em; */

/* last
  color: #413219;
  color: #308529;
  background: #e1d3bd;
 end LAST */
  
  
  /*  background: #308529; */

/*  background: #e1d3bd; */
/*  font-size: 3rem; */
  text-align: center;
  text-decoration: none;
}

.picto-item4:hover:after,
.picto-item4:focus:after {
  content: attr(aria-label);  
  position: absolute;
/*  top: 0.5em; */
  left: 75%;
	transform: translateX(-50%); 
  z-index: 1; 
  white-space: nowrap;  
  padding: 5px 14px;
  background: #413219;
  background: #308529;
  vertical-align: text-top;
 /* width: 10em;
  height: 2.4em; */

  
  
  color: #fff;
  border-radius: 4px;
  font-size: 0.8rem; 
}

.picto-item4 {
  display: inline-flex;
  justify-content: center;
/*  align-items: center; */
  margin: 0 1.2em; 
 /* width: 1.2em; */
/*  height: 1.2em; */

/* last
  color: #413219;
  color: #308529;
  background: #e1d3bd;
 end LAST */
  
  
  /*  background: #308529; */

/*  background: #e1d3bd; */
/*  font-size: 3rem; */
  text-align: center;
/*  vertical-align: middle; */
  text-decoration: none;
}

